{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 35,
  "lineage": "1cc66f19-21eb-e5f3-5036-5fa367462478",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:164210488303:instance/i-0f882fb7966b2148a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f882fb7966b2148a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-020b5902eaae61e26",
            "private_dns": "ip-172-31-92-37.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.92.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ec1e73d086dd16ef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-054b848a26484ee53",
            "tags": {
              "Name": "dev-0",
              "Prop": "Terraform"
            },
            "tags_all": {
              "Name": "dev-0",
              "Prop": "Terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0da378f2cf1bd2bdc"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso_ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:164210488303:instance/i-0e9802fc302617e43",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e9802fc302617e43",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-021df70c80c8d0709",
            "private_dns": "ip-172-31-87-29.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.87.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00d961c3ccaa42a68",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-054b848a26484ee53",
            "tags": {
              "Name": "dev-1",
              "Prop": "Terraform"
            },
            "tags_all": {
              "Name": "dev-1",
              "Prop": "Terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0da378f2cf1bd2bdc"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:164210488303:instance/i-004a867c024568d45",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-004a867c024568d45",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f6ceb3b80c9834f2",
            "private_dns": "ip-172-31-85-168.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.85.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0db135530a75f7aa8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-054b848a26484ee53",
            "tags": {
              "Name": "dev-4",
              "Prop": "Terraform"
            },
            "tags_all": {
              "Name": "dev-4",
              "Prop": "Terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0da378f2cf1bd2bdc"
            ]
          },
          "dependencies": [
            "aws_s3_bucket.dev4",
            "aws_security_group.acesso_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:164210488303:instance/i-00ea9bfa5de73280b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00ea9bfa5de73280b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d0f754af457a2973",
            "private_dns": "ip-172-31-91-120.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.91.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-091256dd2731a4441",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-054b848a26484ee53",
            "tags": {
              "Name": "dev-5",
              "Prop": "Terraform"
            },
            "tags_all": {
              "Name": "dev-5",
              "Prop": "Terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0da378f2cf1bd2bdc"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a606d8395a538502",
            "arn": "arn:aws:ec2:us-east-2:164210488303:instance/i-0424bac4d4931c51a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0424bac4d4931c51a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-061f5468e44cde2bd",
            "private_dns": "ip-172-31-8-183.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.8.183",
            "public_dns": "ec2-3-14-254-73.us-east-2.compute.amazonaws.com",
            "public_ip": "3.14.254.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b53ca6b23cc6f23a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd1fb2d211d755e0",
            "tags": {
              "Name": "dev-6",
              "Prop": "Terraform"
            },
            "tags_all": {
              "Name": "dev-6",
              "Prop": "Terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-064cfca5d13d0b58a"
            ]
          },
          "dependencies": [
            "aws_dynamodb_table.dynamodb-homologacao",
            "aws_security_group.acesso_ssh-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a606d8395a538502",
            "arn": "arn:aws:ec2:us-east-2:164210488303:instance/i-039c0d59707df9169",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-039c0d59707df9169",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-075b2ae0e4c4b66c6",
            "private_dns": "ip-172-31-10-97.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.10.97",
            "public_dns": "ec2-18-218-87-150.us-east-2.compute.amazonaws.com",
            "public_ip": "18.218.87.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03628e1205f1424f9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd1fb2d211d755e0",
            "tags": {
              "Name": "dev-7",
              "Prop": "Terraform"
            },
            "tags_all": {
              "Name": "dev-7",
              "Prop": "Terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-064cfca5d13d0b58a"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso_ssh-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:164210488303:security-group/sg-0da378f2cf1bd2bdc",
            "description": "acesso_ssh",
            "egress": [],
            "id": "sg-0da378f2cf1bd2bdc",
            "ingress": [
              {
                "cidr_blocks": [
                  "191.17.228.118/32",
                  "191.17.228.119/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso_ssh",
            "name_prefix": "",
            "owner_id": "164210488303",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh",
              "Prop": "Terraform"
            },
            "tags_all": {
              "Name": "ssh",
              "Prop": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0840e151f4ce0a9b3"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso_ssh-us-east-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:164210488303:security-group/sg-064cfca5d13d0b58a",
            "description": "acesso_ssh",
            "egress": [],
            "id": "sg-064cfca5d13d0b58a",
            "ingress": [
              {
                "cidr_blocks": [
                  "191.17.228.118/32",
                  "191.17.228.119/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso_ssh",
            "name_prefix": "",
            "owner_id": "164210488303",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh",
              "Prop": "Terraform"
            },
            "tags_all": {
              "Name": "ssh",
              "Prop": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0051cea202294d162"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}